2003-12-03  Ettore Perazzoli  <ettore@ximian.com>

	* importers/icalendar-importer.c: Do not #include shell stuff.

	* gui/main.c: Do not #include <evolution-shell-client.h>.

	* gui/e-itip-control.c: Do not #include
	<e-folder-selector-button.h> nor <evolution-shell-client.h>.
	(start_default_server): Return FALSE.
	(default_server_started_cb): Do not connect the "selected" signal
	on the button since it's now NULL.
	(button_selected_cb): #if 0 out.

	* gui/e-cal-list-view.h: Do not #include
	"evolution-activity-client.h".

	* gui/tasks-component.c (impl_createControls): Give an empty label
	for the status bar.

	* gui/e-day-view.h: Remove all deps on evolution-activity-client.

2003-12-02  Rodney Dawes  <dobey@ximian.com>

	* gui/Makefile.am: Version the schemas
	* gui/apps_evolution_calendar.schemas: Removed
	* gui/apps_evolution_calendar.schemas.in.in: Added

2003-12-02  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/copy-source-dialog.c (copy_source_dialog): added
	a label to the dialog to make it look less ugly.

2003-12-02  Rodrigo Moya <rodrigo@ximian.com>

	* gui/dialogs/copy-source-dialog.c: converted to use an
	ESourceOptionMenu instead of the ESourceSelector.
	(primary_selection_changed_cb): removed.
	(copy_source_dialog): create the ESourceOptionMenu here.
	(source_selected_cb): callback for the "source_selected"
	signal on the ESourceOptionMenu widget.

2003-12-02  Ettore Perazzoli  <ettore@ximian.com>

	* gui/e-calendar-table.h (struct _ECalendarTable): Replace member
	"activity" with an "activity_id".

	* gui/e-cal-view.c (struct _ECalendarViewPrivate): Replace member
	"activity" with "activity_id".
	(e_calendar_view_destroy): Don't unref activity here anymore.
	(e_calendar_view_set_status_message): Report progress using the
	EActivityHandler off the CalendarComponent.

	* gui/calendar-component.c
	(struct _CalendarComponentPrivate): New member activity_handler.
	(calendar_component_init): Init.
	(calendar_component_peek_activity_handler): New.